--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     
 </head>
 <body>
-    <script src="./goit-js-hm-01/js/task-1.js" defer></script>
-    <script src="./goit-js-hm-01/js/task-2.js" defer></script>
-    <script src="./goit-js-hm-01/js/task-3.js" defer></script>
+    <script src="./js/task-1.js" defer></script>
+    <script src="./js/task-2.js" defer></script>
+    <script src="./js/task-3.js" defer></script>
 </body>
 </html>
